Tutorial link on JAR3D homepage

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -90,6 +90,9 @@ predicting RNA 3D motifs in sequences
               The user can view a representative
               instance from each motif group and explore the group further at the RNA 3D Motif Atlas page for the motif group.
             </p>
+            <h3>Tutorial</h3>
+            <p>
+            The tutorial <a href="http://rna.bgsu.edu/main/jar3d-tutorial/">at this link</a> is a bit dated, but still helpful.
         </div>
         <div class="span4">
             <h3>Method</h3>
