Rearranging jar3d output page

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -52,16 +52,18 @@
           <span class="link-icon">
             <a href="{{ result.motif_url }}" target="_blank">&rarr;</a>
           </span>
-          <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
-               title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
-                <img class="ss-thumbnail" src="{{ result.ssurl }}"></img>
-          </a>
+          result.signature
         </td>
         <td>{{ result.cutoff_percent|floatformat:2 }}</td>
         <td>{{ result.mean_cutoff_score|floatformat:2 }}</td>
         <td>{{ result.medianfulleditdist|floatformat }}</td>
         <td>{{ result.medianinterioreditdist|floatformat }}</td>
-        <td>{{ result.signature }}</td>
+        <td>{{  
+          <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
+              title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
+              <img class="ss-thumbnail" src="{{ result.ssurl }}"></img>
+          </a>}}
+          </td>
       </tr>
       {% endfor %}
       </tbody>
