--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -49,20 +49,18 @@
           <input type='radio' name="group" id='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'
                  class='jmolInline' data-coord='{{ result.motif_id }}'>
           <label for='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'>{{ result.motif_id }}</label>
-          <span class="link-icon">
-            <a href="{{ result.motif_url }}" target="_blank">&rarr;</a>
-          </span>
-          result.signature
+            View <a href="{{ result.motif_url }}" target="_blank">{{ result.motif_id }}</a>
+          {{result.signature}}
         </td>
         <td>{{ result.cutoff_percent|floatformat:2 }}</td>
         <td>{{ result.mean_cutoff_score|floatformat:2 }}</td>
         <td>{{ result.medianfulleditdist|floatformat }}</td>
         <td>{{ result.medianinterioreditdist|floatformat }}</td>
-        <td>{{  
+        <td>  
           <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
               title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
               <img class="ss-thumbnail" src="{{ result.ssurl }}"></img>
-          </a>}}
+          </a>
           </td>
       </tr>
       {% endfor %}
