Update single loop result page

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -16,5 +16,6 @@
 
 {% block page_content %}
   {{for row in rows}}
-  <p>{{row}}</p>
+    <p>{{row}}</p>
+  {% endfor %}
 {% endblock page_content%}
