Update single loop result page

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,7 +15,7 @@
 
 
 {% block page_content %}
-  {{for row in rows}}
+  {% for row in rows %}
     <p>{{row}}</p>
   {% endfor %}
 {% endblock page_content%}
