--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,8 +15,9 @@
 
 
 {% block page_content %}
-  {{ block.super }}
-    {% for row in rows %}
-      <p>{{row}}</p>
-    {% endfor %}
+  <p> Test 1 </p>
+  {% for row in rows %}
+  <p> Test 2 </p>
+    <p>{{row}}</p>
+  {% endfor %}
 {% endblock page_content%}
