Update to single loop result view

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,7 +15,25 @@
 
 
 {% block page_content %}
-  {% for row in rows %}
-    <p>{{row}}</p>
+  {% for k, dk in header.iteritems(): %}
+    <p>
+    {% for x in dk: %}
+      {{x}}
+    {% endfor %}
+    </p>
+  {% endfor %}
+  {% for k, dk in motifalig.iteritems(): %}
+    <p>
+    {% for x in dk: %}
+      {{x}}
+    {% endfor %}
+    </p>
+  {% endfor %}
+  {% for k, dk in sequencealig.iteritems(): %}
+    <p>
+    {% for x in dk: %}
+      {{x}}
+    {% endfor %}
+    </p>
   {% endfor %}
 {% endblock page_content%}
