--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,21 +15,21 @@
 
 
 {% block page_content %}
-  {% for k, dk in header.iteritems(): %}
+  {% for k, dk in header.items %}
     <p>
     {% for x in dk: %}
       {{x}}
     {% endfor %}
     </p>
   {% endfor %}
-  {% for k, dk in motifalig.iteritems(): %}
+  {% for k, dk in motifalig.items %}
     <p>
     {% for x in dk: %}
       {{x}}
     {% endfor %}
     </p>
   {% endfor %}
-  {% for k, dk in sequencealig.iteritems(): %}
+  {% for k, dk in sequencealig.items %}
     <p>
     {% for x in dk: %}
       {{x}}
