Update to single results page

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -16,6 +16,9 @@
 
 {% block page_content %}
 {{colnum}}
+{{numlines}}
+{{mtext}}
+{{itext}}
 <div class="row">
     <table class="table table-striped table-condensed table-bordered">
       <thead>
