Update to single results page

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -17,8 +17,11 @@
 {% block page_content %}
 {{colnum}}
 {{numlines}}
+<pre>
 {{mtext}}
+<br>
 {{itext}}
+</pre>
 <div class="row">
     <table class="table table-striped table-condensed table-bordered">
       <thead>
