Add pending page for single loop result

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -21,7 +21,7 @@
       {% for line in lines %}
         <tr>
           {% for cell in line %}
-          <td>{{cell}}</th>
+          <td>{{cell}}</td>
           {% endfor %}
           </tr>
       <tbody>
