Add pending page for single loop result

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -25,6 +25,7 @@
           {% endfor %}
         </tr>
       <thead>
+      {% endfor %}
       <tbody>
       {% for line in body_lines %}
         <tr>
