Add pending page for single loop result

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -21,7 +21,7 @@
       {% for line in header_lines %}
         <tr>
           {% for cell in line %}
-          <th>{{cell}}</th>
+          <th class='table-header'>{{cell}}</th>
           {% endfor %}
         </tr>
       <thead>
