--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -41,5 +41,50 @@
 
 {% block page_specific_js %}
     {{ block.super }}
+        {{ block.super }}
     <script src="{% static "js/jquery.tablesorter.min.js" %}"></script>
+    <script src="{% static "js/jquery.jmolTools.js" %}"></script>
+    <script src="{% static "js/fancybox/jquery.fancybox.pack.js" %}"></script>
+    <script src="{% static "js/jquery.tipsy.js" %}"></script>
+
+    <script>
+      $(document).ready(function() {
+          $("table").tablesorter();
+
+          // initialize jmolTools
+          $('.jmolInline').jmolTools({
+              showStereoId: 'stereo',
+              showNeighborhoodId: 'neighborhood',
+              showNumbersId: 'showNtNums',
+              showNextId: 'next',
+              showPrevId: 'prev'
+          });
+
+          // position jmol
+          (function(){
+              var reference = $('.loop-result-container').first();
+              var offset_left = reference.offset().left + reference.width();
+              var offset_top  = reference.offset().top;
+              $('#jmol').css('position','fixed')
+                        .css('left',offset_left)
+                        .css('top',offset_top);
+          })();
+
+          // fancybox integration
+        $(".fancybox").fancybox({
+          openEffect	: 'none',
+          closeEffect	: 'none'
+        });
+
+        $(".table-header").tipsy({
+            gravity: 's',
+            title: function() {
+              var name = $(this).data('header-name');
+              return $(".help-text[data-header-name='" + name + "']").text();
+            }
+        });
+      });
+    </script>
+
+
 {% endblock page_specific_js %}
