Add pending page for single loop result

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -48,7 +48,7 @@
 
     <script>
       $(document).ready(function() {
-          $("table").tablesorter();
+          $("table").tablesorter({theme:'blue'});
 
           // fancybox integration
         $(".fancybox").fancybox({
