Add pending page for single loop result

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -16,7 +16,7 @@
 
 {% block page_content %}
 <div class="row">
-    <table class="table table-striped table-condensed table-bordered">
+    <table class="class="tablesorter"">
       <thead>
       {% for line in header_lines %}
         <tr>
