--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -16,7 +16,7 @@
 
 {% block page_content %}
 <div class="row">
-    <table class="class="tablesorter"">
+    <table class="table table-striped table-condensed table-bordered">
       <thead>
       {% for line in header_lines %}
         <tr>
@@ -24,7 +24,7 @@
           <th class='table-header' data-header-name='{{forloop.counter}}'>{{cell}}</th>
           {% endfor %}
         </tr>
-      <thead>
+      </thead>
       {% endfor %}
       <tbody>
       {% for line in body_lines %}
@@ -33,8 +33,9 @@
           <td>{{cell}}</td>
           {% endfor %}
         </tr>
-      <tbody>
       {% endfor %}
+      </tbody>
+    </table>
 </div>
 
 {% endblock page_content%}
