--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -18,14 +18,12 @@
 <div class="row">
     <table class="table table-striped table-condensed table-bordered">
       <thead>
-      {% for line in header_lines %}
         <tr>
-          {% for cell in line %}
+          {% for cell in header_line %}
           <th class='table-header' data-header-name='{{forloop.counter}}'>{{cell}}</th>
           {% endfor %}
         </tr>
       </thead>
-      {% endfor %}
       <tbody>
       {% for line in body_lines %}
         <tr>
