--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -19,9 +19,11 @@
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
+          <pre>
           {% for cell in header_line %}
           <th class='table-header' data-header-name='{{forloop.counter}}'>{{cell}}</th>
           {% endfor %}
+          </pre>
         </tr>
       </thead>
       <tbody>
