Improving alignment page table

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -20,7 +20,7 @@
       <thead>
         <tr>
           {% for cell in header_line %}
-          <th class='table-header' data-header-name='{{forloop.counter}}' white-space:'pre'>{{cell}}</th>
+          <th class='table-header' data-header-name='{{forloop.counter}}'><pre>{{cell}}</pre></th>
           {% endfor %}
         </tr>
       </thead>
