--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -19,7 +19,7 @@
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
-          {% for col_num,node,insertion in header_line %}
+          {% for col_num,node,insertion in header_zip %}
           <th class='table-header' data-header-name='{{forloop.counter}}'>{{col_num}}<br>{{node}}<br>{{insertion}}</th>
           {% endfor %}
         </tr>
