--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -20,7 +20,7 @@
       <thead>
         <tr>
           {% for col_num,node,insertion in header_zip %}
-          <th class='table-header' data-header-name='{{forloop.counter}}'>{{col_num}}<br>{{node}}<br>{{insertion}}</th>
+          <th class='table-header' valign='top' align='center'>{{col_num}}<br>{{node}}<br>{{insertion}}</th>
           {% endfor %}
         </tr>
       </thead>
@@ -28,7 +28,7 @@
       {% for line in body_lines %}
         <tr>
           {% for cell in line %}
-          <td>{{cell}}</td>
+          <td align='center'>{{cell}}</td>
           {% endfor %}
         </tr>
       {% endfor %}
