Update alignment header

--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -45,6 +45,11 @@ footer {
 .homepage #message {
     display: none;
 }
+
+th {
+    text-align: center;
+    vertical-align: top;
+}
 /* Tablesorter styling */
 table .header {
   cursor: pointer;
