--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -17,7 +17,7 @@
 {% block page_content %}
 <div class="row">
     <table class="table table-striped table-condensed table-bordered">
-      <thead>
+      <thead  style='text-align: center;vertical-align: top';>
         <tr>
           {% for col_num,node,insertion in header_zip %}
           <th class='table-header'>
