--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -17,10 +17,10 @@
 {% block page_content %}
 <div class="row">
     <table class="table table-striped table-condensed table-bordered">
-      <thead  style='text-align: center;vertical-align: top';>
+      <thead>
         <tr>
           {% for col_num,node,insertion in header_zip %}
-          <th class='table-header'>
+          <th class='table-header'  style='text-align: center;vertical-align: top'>
           {{col_num}}<br>{{node}}<br>{{insertion}}</th>
           {% endfor %}
         </tr>
