--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,6 +15,10 @@
 
 
 {% block page_content %}
+<pre>
+ {{seq_text}}
+ {{model_text}}
+</pre>
 <div class="row">
     <table class="table table-striped table-condensed table-bordered">
       <thead>
