--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -15,17 +15,13 @@
 
 
 {% block page_content %}
-<pre>
- {{seq_text}}
- {{model_text}}
-</pre>
-<div class="row">
+<div>
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
-          {% for col_num,node,insertion in header_zip %}
+          {% for col_num,position,insertion in header_zip %}
           <th class='table-header' style='text-align:center;vertical-align:top;font-family:serif;'>
-          {{col_num}}<br>{{node}}<br>{{insertion}}</th>
+          {{col_num}}<br>{{position}}<br>{{insertion}}</th>
           {% endfor %}
         </tr>
       </thead>
