--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -16,6 +16,7 @@
 
 {% block page_content %}
 <div>
+Click on a column header to sort by that column.  Holding shift and clicking on multiple column headers will sort by each column in order.
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
@@ -35,6 +36,9 @@
       {% endfor %}
       </tbody>
     </table>
+    <pre>
+      {{inter_text}}
+    </pre>
 </div>
 
 {% endblock page_content%}
