Update interactions display

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -37,9 +37,8 @@ Click on a column header to sort by that column.  Holding shift and clicking on 
       </tbody>
     </table>
 </div>
-<pre>
-  {{inter_text}}
-</pre>
+The interactions for this motif group are shown below
+<pre>{{inter_text}}</pre>
 {% endblock page_content%}
 
 {% block page_specific_js %}
