Add alignments for hairpins

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -37,7 +37,7 @@ Click on a column header to sort by that column.  Holding shift and clicking on 
       </tbody>
     </table>
 </div>
-The interactions for this motif group are shown below
+The consensus interactions for this motif group are shown below
 <pre>{{inter_text}}</pre>
 {% endblock page_content%}
 
