--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -23,9 +23,9 @@ Click on a column header to sort by that column.  Holding shift and clicking on 
 <br>
 The strands of your internal loop have been switched to match the strand ordering seen in {{motifid}}.  They are still in 5' to 3' order.
 {% endif %}
-    <table class="table table-striped table-condensed table-bordered">
+    <table class='table table-striped table-condensed table-bordered'>
       <thead>
-        <tr>
+        <tr style='background-color:white'>
           {% for col_num,position,insertion in header_zip %}
           <th class='table-header' style='text-align:center;vertical-align:top;font-family:serif;'>
           {{col_num}}<br>{{position}}<br>{{insertion}}</th>
@@ -33,8 +33,18 @@ The strands of your internal loop have been switched to match the strand orderin
         </tr>
       </thead>
       <tbody>
-      {% for line in body_lines %}
-        <tr>
+      {% for line in seq_lines %}
+        <tr style='background-color:silver'>
+          {% for cell in line %}
+          <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
+          {% endfor %}
+        </tr>
+      {% endfor %}
+      {% for name, line in motif_data %}
+        <tr style='background-color:white'>
+          <td style='text-align:center;font-family:sans-serif;'>
+          	<a href="http://rna.bgsu.edu/rna3dhub/loops/view/{{name}}" target="_blank"> {{ name }}</a>
+          </td> 
           {% for cell in line %}
           <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
           {% endfor %}
