Update alignment header

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -10,9 +10,10 @@
 
 {% block page_subtitle %}
   {{ block.super }}
-  Query {{ query_info.query_id }} completed 
+  Query <a href="http://rna.bgsu.edu/jar3d_dev/result/{{ query_info.query_id }}" target="_blank"> {{ query_info.query_id }}</a>  
   <br>
-  Alignment of Loop {{loopnum}} to {{motifid}}
+  Alignment of Loop {{loopnum}} to 
+  <a href="http://rna.bgsu.edu/rna3dhub/motif/view/{{ motifid }}" target="_blank"> {{motifid}}
 {% endblock page_subtitle %}
 
 
