Update alignment page

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -24,7 +24,7 @@ Click on a column header to sort by that column.  Holding shift and clicking on 
 <br>
 The strands of your internal loop have been switched to match the strand ordering seen in {{motifid}}.  They are still in 5' to 3' order.
 {% endif %}
-    <table class='table table-striped table-condensed table-bordered'>
+    <table class='table table-condensed table-bordered'>
       <thead>
         <tr>
           {% for col_num,position,insertion in header_zip %}
