--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -26,7 +26,7 @@ The strands of your internal loop have been switched to match the strand orderin
 {% endif %}
     <table class='table table-condensed table-bordered'>
       <thead>
-        <tr>
+        <tr style='background-color:white'>
           {% for col_num,position,insertion in header_zip %}
           <th class='table-header' style='text-align:center;vertical-align:top;font-family:serif;'>
           {{col_num}}<br>{{position}}<br>{{insertion}}</th>
@@ -35,14 +35,14 @@ The strands of your internal loop have been switched to match the strand orderin
       </thead>
       <tbody>
       {% for line in seq_lines %}
-        <tr>
+        <tr style='background-color:silver'>
           {% for cell in line %}
           <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
           {% endfor %}
         </tr>
       {% endfor %}
       {% for name, line in motif_data %}
-        <tr>
+        <tr style='background-color:white'>
           <td style='text-align:center;font-family:sans-serif;'>
           	<a href="http://rna.bgsu.edu/rna3dhub/loops/view/{{name}}" target="_blank"> {{ name }}</a>
           </td> 
