--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -35,7 +35,7 @@ The strands of your internal loop have been switched to match the strand orderin
       </thead>
       <tbody>
       {% for line in seq_lines %}
-        <tr style='background-color:whitesmoke'>
+        <tr style='background-color:ghostwhite'>
           {% for cell in line %}
           <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
           {% endfor %}
