Update alignment page

--- a/Templates/JAR3Doutput/base_result_loop_done.html
+++ b/Templates/JAR3Doutput/base_result_loop_done.html
@@ -34,7 +34,7 @@ The strands of your internal loop have been switched to match the strand orderin
         </tr>
       </thead>
       <tbody>
-      {% for line, eds in seq_lines %}
+      {% for line, eds in seq_zip %}
         <tr style='background-color:ghostwhite'>
           {% for cell in line %}
           <td style='text-align:center;font-family:sans-serif;'>{{cell}}</td>
