--- a/Templates/JAR3Doutput/results.html
+++ b/Templates/JAR3Doutput/results.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 <pre>
-<link rel="stylesheet" media="all" type="text/css" href="http://rna.bgsu.edu/nrlist/css/nrlists.css">
-<script language='javascript' src='http://rna.bgsu.edu/nrlist/js/sorttable.js'></script>
+<link rel="stylesheet" media="all" type="text/css" href="/static/css/nrslists.css">
+<script language='javascript' src='/static/js/sorttable.js'></script>
 
 <a href=\"http://docs.google.com/View?id=dhnt3bqf_206fwss55c6\">JAR3D Motif Inference User Manual</a>
 <table class='sortable' border=1>
@@ -23,7 +23,7 @@
 <td>{{ r.meanscore }}</td><td>{{ r.medianscore }}</td>
 <td>{{ r.meanpercentile }}</td><td>{{ r.medianpercentile }}</td><td>{{ r.meaninterioreditdist }}</td>
 <td>{{ r.meanfulleditdist }}</td><td>{{ r.signature }}</td></tr>
-{% endfor %} 
+{% endfor %}
 
 </table>
 </pre>
